<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:motion="http://schemas.android.com/apk/res-auto">

    <Transition
        motion:autoTransition="animateToEnd"
        motion:constraintSetEnd="@+id/end"
        motion:constraintSetStart="@id/start"
        motion:duration="4000">
        <KeyFrameSet>
            <KeyPosition
                motion:framePosition="50"
                motion:keyPositionType="parentRelative"
                motion:motionTarget="@id/name"
                motion:percentX="0.3" />

            <KeyPosition
                motion:framePosition="50"
                motion:keyPositionType="parentRelative"
                motion:motionTarget="@id/position"
                motion:percentX="0.3" />

            <KeyAttribute
                android:scaleX="2.0"
                android:scaleY="2.0"
                motion:framePosition="30"
                motion:motionTarget="@id/imageView2" />
        </KeyFrameSet>
    </Transition>

    <ConstraintSet android:id="@+id/start" />

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/imageView2"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/photo"
            motion:layout_constraintBottom_toBottomOf="@id/imageView"
            motion:layout_constraintEnd_toEndOf="@id/verticalGuideline"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@id/imageView" />

        <Constraint
            android:id="@+id/biography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1.0"
            android:padding="24dp"
            android:text="@string/biography"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline" />


        <Constraint
            android:id="@+id/name"
            android:alpha="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@id/position"
            app:layout_constraintStart_toEndOf="@id/verticalGuideline1"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <Constraint
            android:id="@+id/position"
            android:alpha="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
            app:layout_constraintStart_toEndOf="@id/verticalGuideline1"
            app:layout_constraintTop_toBottomOf="@id/name" />



    </ConstraintSet>
</MotionScene>